@@ -1,3 +1,8 @@
+2013-02-01 Fri  Jari Aalto  <jari.aalto@cante.net>
+
+	* bin/cygbuild.sh (CygbuildCmdCleanBasic): New.
+	(CygbuildCmdCleanMain): If no Makefile, call CygbuildCmdCleanBasic().
+
 2012-12-11 Tue  Jari Aalto  <jari.aalto@cante.net>
 
 	* bin/cygbuild.sh (CygbuildCmdInstallMain): Remove variable
